--- a/IDP/IDP_gpd_format.html
+++ b/IDP/IDP_gpd_format.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
 <!--BEGIN TOP RED BAR -->
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
@@ -28,9 +27,11 @@
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
 <!-- END TOP RED BAR -->
+
+
 <div id="content_container">
   <!-- PAGE TITLE AREA AND BOX -->
-   <div id="page_title_area">
+<div id="page_title_area">
     <!-- STANDARD PAGE TITLE; NO DECORATIVE GRAPHIC -->
     <!-- <div id="page_title_leftcontent"> -->
     <div id="page_title_leftcontent">
@@ -58,15 +59,12 @@
     
     
   </div>
-
-  <!-- PAGE TITLE LEFT CONTENT WITH OPTIONAL QUAD LAMP DECORATION; UN-COMMENT TO USE -->
-
   <!-- END PAGE TITLE AREA AND BOX -->
   <div id="content">
     <h3><img src="images/dna.png"> GPD format <i>(.gpd)</i></h3>
   <p>
   The GPD (genepred, http://genome.ucsc.edu/FAQ/FAQformat.html#format9) format is the the same format as RefSeq (i.e. refFlat.txt). The delimiter is tab. The following details the columns. <br>
-  The isoform data/libraries or long read alignment reported in this project are in GPD format. <b> If you need to convert from/to gpd format to/from gtf or psl formats, please contact Kin Fai Au: kinfaiau(at)gmail(dot)com for the scripts.</b>
+  The isoform data/libraries or long read alignment reported in this project are in GPD format. <b> If you need to convert from/to gpd format to/from gtf or psl formats, please contact Kin Fai Au: <img src="images/contact.png"> for the scripts.</b>
   </p>
   <blockquote>
   GNAME | TNAME | RNAME | STRAND | START | END | CSTART | CEND | NBLOCK | BLOCKSTARTLIST | BLOCKENDLIST
@@ -120,10 +118,9 @@
   </dl>
  	<br>
  <p>
-      If you want to subscribe our update news, please contact Kin Fai Au: <b>kinfaiau(at)gmail(dot)com</b>.
+      If you want to subscribe our update news, please contact Kin Fai Au: <img src="images/contact.png">.
    </p>	
   </div>
-  
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
@@ -202,14 +199,6 @@
       <li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
     </ul>
 </div>
-  
-  
-
-<!-- end #content -->
-</body>
-
-
-</html>
 <!-- end #content -->
 </body>
 
