--- a/IDP/IDP_manual.html
+++ b/IDP/IDP_manual.html
@@ -59,7 +59,7 @@
 	</ul>
     </div>
 
-<p class="page_title_area_lower">Latest News:  IDP 0.1.6 major update is released ... <a href="default.html#news">read more</a></p>
+<p class="page_title_area_lower">Latest News:  IDP 0.1.6 major update is released ... <a href="IDP.html#news">read more</a></p>
     
     
   </div>
