--- a/IDP/IDP_gpd_format.html
+++ b/IDP/IDP_gpd_format.html
@@ -118,8 +118,9 @@
   </dl>
  	<br>
  <p>
-      If you want to subscribe our update news, please contact Kin Fai Au: <img src="images/contact.png">.
+      If you want to subscribe our update news, please contact Kin Fai Au: 
    </p>	
+	  <img src="images/contact.png">
   </div>
 <div id="sidebar">
     <h2>Site Map</h2>
