--- a/IDP/IDP_gpd_format.html
+++ b/IDP/IDP_gpd_format.html
@@ -120,7 +120,7 @@
  <p>
       If you want to subscribe our update news, please contact Kin Fai Au: 
    </p>	
-	  <img src="images/contact.png">
+	  <img src="images/Picture3.png">
   </div>
 <div id="sidebar">
     <h2>Site Map</h2>
