--- a/IDP/hESC_long_read_file_guide.html
+++ b/IDP/hESC_long_read_file_guide.html
@@ -106,61 +106,63 @@
 </div>
 
 
-
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="hESC.asp">Home</a></li>
-      <li><a href="hESC_Gene_isoform_detection_and_prediction.asp">Gene isoform detection and prediction</a></li>
-      <li><a href="hESC_hESC-specific_novel_genes.asp">hESC-specific novel genes</a></li>
-      <li><a href="hESC_Novel_gene_isoforms.asp">Novel gene isoforms</a></li>
-    <li><a href="hESC_Quantification_of_isoform_abundance.asp">Quantification of isoform abundance</a></li>
-    <li><a href="hESC_Isoforms_of_pluripotent_stem_cell_markers.asp">Isoforms of pluripotent stem cell markers</a></li>
-    <li><a href="hESC_ncRNA_identification.asp">ncRNA identification</a></li>
-    <li><a href="hESC_Data.asp">Data</a></li>
+      <li><a href="hESC.html">Home</a></li>
+      <li><a href="hESC_Gene_isoform_detection_and_prediction.html">Gene isoform detection and prediction</a></li>
+      <li><a href="hESC_hESC-specific_novel_genes.html">hESC-specific novel genes</a></li>
+      <li><a href="hESC_Novel_gene_isoforms.html">Novel gene isoforms</a></li>
+    <li><a href="hESC_Quantification_of_isoform_abundance.html">Quantification of isoform abundance</a></li>
+    <li><a href="hESC_Isoforms_of_pluripotent_stem_cell_markers.html">Isoforms of pluripotent stem cell markers</a></li>
+    <li><a href="hESC_ncRNA_identification.html">ncRNA identification</a></li>
+    <li><a href="hESC_Data.html">Data</a></li>
     
     </ul>
     <h3>Help</h3>
     <ul>
-    <li><a href="hESC_gpd_format.asp">GPD format</a></li>
-      <li><a href="hESC_howitworks.asp">How it works?</a></li>
-      <li><a href="http://www-stage.healthcare.uiowa.edu/labs/au/IDP/hESC_long_read_file_guide.html">Generate long read files</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/utility_script.asp">Utilities</a></li>
-      <li><a href="hESC_faq.asp">FAQ</a></li>
-      <li><a href="hESC_contact.asp">Contact</a></li>
+    <li><a href="hESC_gpd_format.html">GPD format</a></li>
+      <li><a href="hESC_howitworks.html">How it works?</a></li>
+      <li><a href="http://www.augroup.org/IDP/hESC_long_read_file_guide.html">Generate long read files</a></li>
+      <li><a href="http://www.augroup.org/utility_script.html">Utilities</a></li>
+      <li><a href="hESC_faq.html">FAQ</a></li>
+      <li><a href="hESC_contact.html">Contact</a></li>
     </ul>
 
-    <h2>Useful links</h2>
-    <ul>
-      <li><a href="http://www.augroup.org/">Au Lab</a> - Au Lab homepage </li>
+        <h2>Useful links</h2>
+       <ul>
+      <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
     </ul>
     <ul>
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/LSC/LSC.html">LSC</a> - Error correction of PacBio long reads </li>
+      <li><a href="http://www.augroup.org/LSC/LSC">LSC</a> - Error correction of PacBio long reads </li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/IDP/">IDP</a> - Isoform Detection and Prediction  </li>
+      <li><a href="http://www.augroup.org/IDP/IDP">IDP</a> - Isoform Detection and Prediction  </li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/IDP/hESC.asp">hESC transcriptome</a> - hESC transcriptome by IDP </li>
+      <li><a href="http://www.augroup.org/IDP-ASE/IDP-ASE">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
     </ul>
-
+    <ul>
+      <li><a href="http://www.augroup.org/IDP-fusion/IDP-fusion">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
+    </ul>
+    <ul>
+      <li><a href="http://www.augroup.org/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
+    </ul>
+    <ul>
+      <li><a href="https://github.com/jason-weirather/Au-public">Au lab scripts</a> - Public repository of Au lab scripts and utilities </li>
+    </ul>
 
 
     <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
-  </div>
-
-
 <div id="footer">
     <ul>
       <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
       <li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
     </ul>
-</div>
-  
-    
+</div>  
 <!-- end #content -->
 </body>
 
