--- a/contact/contact.html
+++ b/contact/contact.html
@@ -62,26 +62,27 @@
 
 
   <lj><b>OFFICE:</b></lj> <br>
-    3291 CBRB<br>
-    Department of Internal Medicine <br>
-    285 Newton Road<br>
-    The University of Iowa<br>
-    Iowa City, IA 52242<br>
-  <lj><b>PHONE:</b></lj> (319) 335 - 3053 <br>
-
+    Suit 250 Lincoln Tower<br>
+    Department of Biomedical Informatics <br>
+    1800 Cannon Drive<br>
+    The Ohio State University<br>
+    Columbus, OH 43210<br>
+  <lj><b>PHONE:</b></lj> (614) 292 - 4778 <br>
+  <lj><b>FAX:</b></lj> (614) 688 - 6600 <br>
 
 <br><br>
     <lj><b>DRY LAB:</b></lj> <br>
-    3287 CBRB<br>
-    Department of Internal Medicine<br>
-    285 Newton Road<br>
-    The University of Iowa<br>
-    Iowa City, IA 52242<br>
-  <lj><b>PHONE:</b></lj> (319) 384 - 3175 <br>
+    Suit 310-N Lincoln Tower<br>
+    Department of Biomedical Informatics <br>
+    1800 Cannon Drive<br>
+    The Ohio State University<br>
+    Columbus, OH 43210<br>
+  <lj><b>PHONE:</b></lj> (614) 688 - 9742 <br>
 
 <br><br>
   <lj><b>EMAIL:</b></lj> <br>
-    kinfai-au(at)uiowa(dot)edu 
+	<img src="images/Picture3.png" width="20%" hight="20%">
+ 
       </li>
 
 </div>
