--- a/contact/contact.html
+++ b/contact/contact.html
@@ -85,9 +85,9 @@
  
       </li>
 
-</div>
-
-    <div id="page_title_rightcontent">
+ </div>
+<!-- insert a photo of the lab/ Lincoln Tower --> 
+<!--    <div id="page_title_rightcontent">
   <ul>
 
 
@@ -96,7 +96,7 @@
   </ul>
     </div>
     
-
+-->
 
 
 </div>
