--- a/AlignQC/AlignQC_contact.html
+++ b/AlignQC/AlignQC_contact.html
@@ -67,7 +67,7 @@
   <div id="content">
     <h2>Contact</h2>
     <p>We welcome any comments, suggestions, questions or bug reports. <br>
-    For all the enquiries, please contact Kin Fai Au: <b>KinFai(dot)Au(at)osumc(dot)edu</b>. </p>
+    For all the enquiries, please contact Kin Fai Au: <img src="images/Picture3.png" width="20%" hight="20%">. </p>
     <p>
     If you would like to report a bug or crash, please include in your email the following:
     </p>
