--- a/AlignQC/AlignQC_manual.html
+++ b/AlignQC/AlignQC_manual.html
@@ -50,7 +50,7 @@
 	</ul>
     </div>
 
-<p class="page_title_area_lower">Latest News:  AlignQC is released <a href="default.asp#news">read more</a></p>
+<p class="page_title_area_lower">Latest News:  AlignQC is released <a href="alignqc.html#news">read more</a></p>
     
   </div>
   <!-- END PAGE TITLE AREA AND BOX -->
@@ -85,7 +85,7 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="alignqc">Home</a></li>
+      <li><a href="alignqc.html">Home</a></li>
       <li><a href="AlignQC_download_current.html">Downloads</a></li>
       <li><a href="AlignQC_contact.html">Contact</a></li>
       <li><a href="AlignQC_requirements.html">Requirements</a></li>
