--- a/AlignQC/AlignQC_download_11.html
+++ b/AlignQC/AlignQC_download_11.html
@@ -53,7 +53,7 @@
 	</ul>
     </div>
 
-<p class="page_title_area_lower">Latest News:  AlignQC is released <a href="default.asp#news">read more</a></p>
+<p class="page_title_area_lower">Latest News:  AlignQC is released <a href="alignqc.html#news">read more</a></p>
     
     
   </div>
@@ -131,7 +131,7 @@ expressed 50k bases.
     </ul>
 
         <h2>Useful links</h2>
-    <h2>Useful links</h2>
+
     <ul>
       <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
     </ul>
