--- a/AlignQC/alignqc.html
+++ b/AlignQC/alignqc.html
@@ -58,7 +58,7 @@
 	</ul>
     </div>
 
-<p class="page_title_area_lower">Latest News:  AlignQC is released <a href="default.asp#news">read more</a></p>
+<p class="page_title_area_lower">Latest News:  AlignQC is released <a href="alignqc.html#news">read more</a></p>
     
     
   </div>
