--- a/GenoClone/GenoClone/GenoClone_contact.html
+++ b/GenoClone/GenoClone/GenoClone_contact.html
@@ -53,7 +53,7 @@
 	</ul>
     </div>
 
-<p class="page_title_area_lower">Latest News:  GenoClone is released <a href="default.asp#news">read more</a></p>
+<p class="page_title_area_lower">Latest News:  GenoClone is released <a href="GenoClone.html#news">read more</a></p>
     
     
   </div>
@@ -61,7 +61,7 @@
   <div id="content">
     <h2>Contact</h2>
     <p>We welcome any comments, suggestions, questions or bug reports. <br>
-    For all the enquiries, please contact Kin Fai Au: <b>KinFai(dot)Au(at)osumc(dot)edu</b>. </p>
+    For all the enquiries, please contact Kin Fai Au: 	<img src="images/Picture3.png" width="20%" hight="20%">. </p>
     <p>
     If you would like to report a bug or crash, please include in your email the following:
     </p>
