--- a/IDP-denovo.20160829/IDP-denovo_contact.html
+++ b/IDP-denovo.20160829/IDP-denovo_contact.html
@@ -60,7 +60,7 @@
   <div id="content">
     <h2>Contact</h2>
     <p>We welcome any comments, suggestions, questions or bug reports. <br>
-    For all the enquiries, please contact Kin Fai Au: <b>KinFai(dot)Au(at)osumc(dot)edu</b>. </p>
+    For all the enquiries, please contact Kin Fai Au: 	<img src="images/Picture3.png" width="20%" hight="20%">. </p>
     <p>Alternatively, you can post your question on <a href="http://seqanswers.com/forums/forumdisplay.php?f=18">SEQanswers forums</a>
     with "IDP" in the title.</p>
     <p>
@@ -143,7 +143,7 @@
 
 
 <ul>
-      <li><a href="http://www.augroup.org/GenoClone/GenoClone/">GenoClone</a> - Reveal tumor heterogeneity</li>
+      <li><a href="http://www.augroup.org/GenoClone/GenoClone/GenoClone/">GenoClone</a> - Reveal tumor heterogeneity</li>
     </ul>
 
 
