--- a/IDP-denovo.20160829/idp-denovo.html
+++ b/IDP-denovo.20160829/idp-denovo.html
@@ -142,12 +142,12 @@
       <li><a href="http://www.augroup.org/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/AlignQC/alignqc/">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
+      <li><a href="http://www.augroup.org/AlignQC/alignqc">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
     </ul>
    
 
 <ul>
-      <li><a href="http://www.augroup.org/IDP-denovo.20160829/idp-denovo/">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
+      <li><a href="http://www.augroup.org/IDP-denovo.20160829/idp-denovo">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
     </ul>
 
 
