--- a/IDP-denovo.20160829/IDP-denovo_guide.html
+++ b/IDP-denovo.20160829/IDP-denovo_guide.html
@@ -98,6 +98,8 @@ For test (in directory "test_data"):
   SR align to pseudo-reference with HISAT 
   LR align to transcripts with GMAP
   
+  </div>
+  
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
@@ -149,17 +151,17 @@ For test (in directory "test_data"):
       <li><a href="http://www.augroup.org/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/AlignQC/alignqc/">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
+      <li><a href="http://www.augroup.org/AlignQC/alignqc">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
     </ul>
    
 
 <ul>
-      <li><a href="http://www.augroup.org/IDP-denovo.20160829/idp-denovo/">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
+      <li><a href="http://www.augroup.org/IDP-denovo.20160829/idp-denovo">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
     </ul>
 
 
 <ul>
-      <li><a href="http://www.augroup.org/GenoClone/GenoClone/">GenoClone</a> - Reveal tumor heterogeneity</li>
+      <li><a href="http://www.augroup.org/GenoClone/GenoClone/GenoClone">GenoClone</a> - Reveal tumor heterogeneity</li>
     </ul>
 
 
