--- a/IDP-fusion/IDP-fusion_tutorial.html
+++ b/IDP-fusion/IDP-fusion_tutorial.html
@@ -94,8 +94,8 @@
     </p>
     <blockquote>
     <pre>
-      $ ls MCF7_chr17q23-25chr20q13_Example/
-      Data/ output_example/ run_fasta.cfg run_psl.cfg temp_example/
+      $ ls MCF7_chr17q23-25chr20q13_Example/ Data/ 
+      output_example/ run_fasta.cfg run_psl.cfg temp_example/
       $ cd MCF7_chr17q23-25chr20q13_Example/
       $ ls Data/
       bowtie2/
@@ -104,7 +104,7 @@
       gmap_index.chr17chr20/
       hg19.chr17chr20.gene_est.refFlat.txt
       long_reads.chr17q23-25chr20q13.fasta
-      MCF7_ready_for_fusion_20140928.chr17q23-25chr20q13.sorted.psl
+  MCF7_ready_for_fusion_20140928.chr17q23-25chr20q13.sorted.psl
       multiexon_refFlat.txt_positive_exp_len
       refFlat_20140611.chr17chr20.gpd.txt
       short_reads.chr17q23-25chr20q13.tenth.fasta
