--- a/IDP/IDP_contact.html
+++ b/IDP/IDP_contact.html
@@ -64,7 +64,7 @@
   <div id="content">
     <h2>Contact</h2>
     <p>We welcome any comments, suggestions, questions or bug reports. <br>
-    For all the enquiries, please contact Kin Fai Au: <b>KinFai(dot)Au(at)osumc(dot)edu</b>. </p>
+    For all the enquiries, please contact Kin Fai Au: 	<img src="images/Picture3.png" width="20%" hight="20%">. </p>
     <p>Alternatively, you can post your question on <a href="http://seqanswers.com/forums/forumdisplay.php?f=18">SEQanswers forums</a>
     with "IDP" in the title.</p>
     <p>
