--- a/IDP/hESC.html
+++ b/IDP/hESC.html
@@ -203,7 +203,7 @@
     <ul>
       <li><a href="https://github.com/jason-weirather/Au-public">Au lab scripts</a> - Public repository of Au lab scripts and utilities </li>
     </ul>
-
+	</div>
 
     <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
 <div id="footer">
