--- a/IDP/hESC.html
+++ b/IDP/hESC.html
@@ -90,7 +90,7 @@
         <li><b><a href="hESC_howitworks.html">How it works? </a></b></li>
 			<dd> The SpliceMap-LSC-IDP pipeline is applied to identify gene isoforms. </dd>		
 			</ul>
-	    <p> <font color="red"> We keep optimizing the results by running the updated LSC and IDP. More and more reliable results will be updated. If you want to subscribe our update news, please contact Kin Fai Au: </font> <img src="images/contact.png"></p>
+	    <p> <font color="red"> We keep optimizing the results by running the updated LSC and IDP. More and more reliable results will be updated. If you want to subscribe our update news, please contact Kin Fai Au: </font> 	<img src="images/Picture3.png" width="20%" hight="20%"></p>
 
     <h2>Latest publications</h2>
 
@@ -203,9 +203,12 @@
     <ul>
       <li><a href="https://github.com/jason-weirather/Au-public">Au lab scripts</a> - Public repository of Au lab scripts and utilities </li>
     </ul>
-	</div>
 
-    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
+
+ <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
+  </div>
+
+
 <div id="footer">
     <ul>
       <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
