--- a/IDP/hESC_Data.html
+++ b/IDP/hESC_Data.html
@@ -103,7 +103,7 @@
     </dd>
 	<br>
  <p>
-      If you want to subscribe our update news, please contact Kin Fai Au: <img src="images/contact.png">.
+      If you want to subscribe our update news, please contact Kin Fai Au: <img src="images/Picture3.png" width="20%" hight="20%">.
    </p>	
      </div>
 
@@ -156,19 +156,16 @@
       <li><a href="https://github.com/jason-weirather/Au-public">Au lab scripts</a> - Public repository of Au lab scripts and utilities </li>
     </ul>
 
+ <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
+  </div>
 
-    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
+
 <div id="footer">
     <ul>
       <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
       <li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
     </ul>
 </div>
-<!-- end #content -->
-</body>
-
-
-</html>
 
 <!-- end #content -->
 </body>
