--- a/IDP/hESC_Quantification_of_isoform_abundance.html
+++ b/IDP/hESC_Quantification_of_isoform_abundance.html
@@ -111,8 +111,10 @@
       <li><a href="https://github.com/jason-weirather/Au-public">Au lab scripts</a> - Public repository of Au lab scripts and utilities </li>
     </ul>
 
+ <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
+  </div>
 
-    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
+
 <div id="footer">
     <ul>
       <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
@@ -122,6 +124,5 @@
 
 <!-- end #content -->
 </body>
-
 
 </html>
