--- a/IDP/hESC_faq.html
+++ b/IDP/hESC_faq.html
@@ -36,7 +36,7 @@
     <div id="page_title_leftcontent">
       <h1>hESC transcriptome</h1>
       <ul>
-        <li>This Human Embryonic Stem Cell <br>(hESC, H1 cell line) <br>transcriptome is identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/"><b>SpliceMap</b></a>-<a href="http://www.augroup.org/LSC/"><b>LSC</b></a>-<a href="http://www.augroup.org/IDP/"><b>IDP</b></a> pipeline<br>
+        <li>This Human Embryonic Stem Cell <br>(hESC, H1 cell line) <br>transcriptome is identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/"><b>SpliceMap</b></a>-<a href="http://www.augroup.org/LSC/LSC"><b>LSC</b></a>-<a href="http://www.augroup.org/IDP/IDP"><b>IDP</b></a> pipeline<br>
 
       </ul>
     </div>
@@ -59,7 +59,7 @@
     <h2>FAQ</h2>
     If you have any questions that have not been answered here, please <a href="hESC_contact.html">contact</a> us.
     <h3><img src="images/dna.png"> What is this transcriptome?</h3>
-    We generated the RNA-seq data of Human Embryonic Stem Cell (hESC, H1 cell line)from Illumina and PacBio data. Then, the H1 transcriptome is identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/"><b>SpliceMap</b></a>-<a href="http://www.augroup.org/LSC/"><b>LSC</b></a>-<a href="http://www.augroup.org/IDP/"><b>IDP</b></a> pipeline.
+    We generated the RNA-seq data of Human Embryonic Stem Cell (hESC, H1 cell line)from Illumina and PacBio data. Then, the H1 transcriptome is identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/"><b>SpliceMap</b></a>-<a href="http://www.augroup.org/LSC/LSC"><b>LSC</b></a>-<a href="http://www.augroup.org/IDP/IDP"><b>IDP</b></a> pipeline.
  
   </div>
   
