--- a/IDP-denovo.20160829/IDP-denovo_download_current.html
+++ b/IDP-denovo.20160829/IDP-denovo_download_current.html
@@ -69,7 +69,7 @@
     <table border="1" cellpadding="1">
     <tr>
     <td>
-    <a href="https://drive.google.com/open?id=1skxzIz"  onClick="ga('send', 'event', 'file download', 'click', 'IDP-denovo download release');"><img src="images/download.png"><b>IDP-denovo 20160516</b></a>
+    <a href="https://drive.google.com/file/d/1skxzIzCQfQ52dt8_2Bu3UzFd6DN4ylam/view?usp=sharing"  onClick="ga('send', 'event', 'file download', 'click', 'IDP-denovo download release');"><img src="images/download.png"><b>IDP-denovo 20160516</b></a>
     </td>
      <td>
     Please see the <a href="IDP-denovo_download_current.html#notes">release notes</a> for 
