--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -207,6 +207,7 @@
 <li>Yijia Sun, Master student (2018)</li>
 <li>Yuru Wang, Master student (2018)</li>
 <li>Dixian Zhu, Master student (2017-2018)</li>
+<li>Zujun Liu, Research Associate (2017-2019)</li>
 <br>
 <li>Haomin Li, Undergraduate student (2017-2018)</li>
 <li>Yunyi Li, Volunteer (2018)</li>
