--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -74,8 +74,7 @@
 
       <lj><b>Principal Investigator</b></lj> 
       <br>Associate Professor
-      <br><a href="http://www.medicine.uiowa.edu/InternalMedicine/">Department of Internal Medicine</a>
-      <br><a href="http://www.public-health.uiowa.edu/biostat/">Department of Biostatistics</a>
+        <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
       </li>
 
       </ul>
@@ -94,7 +93,7 @@
       <ul>
 
   <b>Post-Doc</b>
-    <br><a href="http://www.medicine.uiowa.edu/InternalMedicine/">Department of Internal Medicine</a>
+            <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
     <br>Joined Lab in 2016
 
 
@@ -116,7 +115,7 @@
       <ul>
 
   <b>Post-Doc</b>
-    <br><a href="http://www.medicine.uiowa.edu/InternalMedicine/">Department of Internal Medicine</a>
+                <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
     <br>Joined Lab in 2015
 
 
@@ -125,14 +124,14 @@
   </tr>
 
 <tr>
-    <td valign="top"><img src="images/ZujunLiu2017.jpg" width="140" ></td>
+    <td valign="top"><img src="images/Amir.png" width="140" ></td>
     <td valign="top">
-          <h1>Zujun Liu</h1><br>
+          <h1>Seyed Amir Malekpour</h1><br>
       <ul>
 
-  <b>Research Associate</b>
-    <br><a href="http://www.medicine.uiowa.edu/InternalMedicine/">Department of Internal Medicine</a>
-    <br>Joined Lab in 2017
+  <b>Post-Doc</b>
+        <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
+    <br>Joined Lab in 2019
 
 
       </ul>
@@ -146,7 +145,7 @@
       <ul>
 
   <b>PhD Student</b>
-    <br><a href="http://www.medicine.uiowa.edu/InternalMedicine/">Department of Internal Medicine</a>
+                <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
     <br>Joined Lab in 2017
 
 
@@ -163,6 +162,7 @@
       <ul>
 
   <b>PhD Student</b>
+                <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
     <br>Joined Lab in 2018
 
 
@@ -178,6 +178,7 @@
       <ul>
 
   <b>Undergraduate Student</b>
+         <br><a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a> 
     <br>Joined Lab in 2019
 
 
