--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
   <br><i> Genome Biology.</i> 2019.  [<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1605-z">Manuscript</a>]
 <br>
   </p>
+	<ul>Third-generation sequencing technologies have advanced the progress of the biological research by generating reads that are 
+		substantially longer than second-generation sequencing technologies. However, their notorious high error rate impedes straightforward 
+		data analysis and limits their application. A handful of error correction methods for these error-prone long reads have been developed 
+		to date. The output data quality is very important for downstream analysis, whereas computing resources could limit the utility of 
+		some computing-intense tools. There is a lack of standardized assessments for these long-read error-correction methods.
+	</ul> 
 	
 <p>
   <br><b>Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b><br>
