--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <br><b>EC coupling structural protein junctophilin-2 encodes a stress-adaptive transcription regulator.</b><br>
 	Guo, A., Wang, Y., Chen, B., <b>Wang, Y. </b>,Yuan, J., Zhang, L., Hall, D., Wu, J., Shi, Y., Zhu, Q., Chen, C., Thiel, W.H., 
 	Zhan, X., Weiss, R.M, Zhan, F., Musselman, C., Pufall, M., Zhu, W.,<b> Au, K.F. </b>, Hong, J., Anderson, M.E., Grueter, C.E., Song, L.S.
-  <br><i> Genes.</i> 2018.  [<a href="https://science.sciencemag.org/content/sci/362/6421/eaan3303.full.pdf">Manuscript</a>]
+  <br><i>Science.</i> 2018.  [<a href="https://science.sciencemag.org/content/sci/362/6421/eaan3303.full.pdf">Manuscript</a>]
 <br>
   </p>
 	
