--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -74,7 +74,8 @@
 
       <lj><b>Principal Investigator</b></lj> 
       <br>Associate Professor
-        <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
+        <br>The Ohio State University College of Medicine
+        <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
       </li>
 
       </ul>
@@ -93,7 +94,7 @@
       <ul>
 
   <b>Post-Doc</b>
-            <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
+            <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
     <br>Joined Lab in 2016
 
 
@@ -115,7 +116,7 @@
       <ul>
 
   <b>Post-Doc</b>
-                <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
+                <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
     <br>Joined Lab in 2015
 
 
@@ -130,7 +131,7 @@
       <ul>
 
   <b>Post-Doc</b>
-        <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
+        <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
     <br>Joined Lab in 2019
 
 
@@ -145,7 +146,7 @@
       <ul>
 
   <b>PhD Student</b>
-                <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
+                <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
     <br>Joined Lab in 2017
 
 
@@ -162,7 +163,7 @@
       <ul>
 
   <b>PhD Student</b>
-                <br><a href="https://medicine.osu.edu/bmi/">Department of Bioinformatics</a> 
+                <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
     <br>Joined Lab in 2018
 
 
