--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
  <h2>Latest Publications</h2>
 	
 <table>
-		<tr>
-<td> 			<br><b>A comparative evaluation of hybrid error correction methods for error-prone long reads</b> <img src="images/GenomeBio.jpg" width="35">
-	<br>Fu, S., <b>Wang, A., Au, K.F.</b>
-  <br><i> Genome Biology.</i> 2019.  [<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1605-z">Manuscript</a>]
+	<tr><th><img src="images/GenomeBio.jpg" width="35"></th>
+		<th><td><br><b>A comparative evaluation of hybrid error correction methods for error-prone long reads</b> </td>
+		<td><br>Fu, S., <b>Wang, A., Au, K.F.</b></td>
+  <td><br><i> Genome Biology.</i> 2019.  [<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1605-z">Manuscript</a>]</td></th></tr>
 <br>
 Third-generation sequencing technologies have advanced the progress of the biological research by generating reads that are substantially longer than second-generation sequencing technologies. However, their notorious high error rate impedes straightforward data analysis and limits their application. A handful of error correction methods for these error-prone long reads have been developed to date. The output data quality is very important for downstream analysis, whereas computing resources could limit the utility of some computing-intense tools. There is a lack of standardized assessments for these long-read error-correction methods.</p> 
 		</td>
-	<td><img src="images/ComparativeEval1.png" width="200"></td>
+	<td><img src="images/ComparativeEval1.png" width="300"></td>
 </tr> </table> 
 
 	
