--- a/index.html
+++ b/index.html
@@ -77,15 +77,16 @@
  <h2>Latest Publications</h2>
 	
 <table>
-	<tr><th><img src="images/GenomeBio.jpg" width="35"></th>
-		<th><td><br><b>A comparative evaluation of hybrid error correction methods for error-prone long reads</b> </td>
-		<td><br>Fu, S., <b>Wang, A., Au, K.F.</b></td>
-  <td><br><i> Genome Biology.</i> 2019.  [<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1605-z">Manuscript</a>]</td></th></tr>
-<br>
-Third-generation sequencing technologies have advanced the progress of the biological research by generating reads that are substantially longer than second-generation sequencing technologies. However, their notorious high error rate impedes straightforward data analysis and limits their application. A handful of error correction methods for these error-prone long reads have been developed to date. The output data quality is very important for downstream analysis, whereas computing resources could limit the utility of some computing-intense tools. There is a lack of standardized assessments for these long-read error-correction methods.</p> 
-		</td>
-	<td><img src="images/ComparativeEval1.png" width="300"></td>
-</tr> </table> 
+	<tr><td><img src="images/GenomeBio.jpg" width="50"></td>
+		<td><b>A comparative evaluation of hybrid error correction methods for error-prone long reads</b> 
+		<br>Fu, S., <b>Wang, A., Au, K.F.</b>
+  		<br><i> Genome Biology.</i> 2019.  [<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1605-z">Manuscript</a>]</td></tr>
+	<tr><td>Third-generation sequencing technologies have advanced the progress of the biological research by generating reads that are substantially longer than second-generation sequencing technologies. However, their notorious high error rate impedes straightforward data analysis and limits their application. A handful of error correction methods for these error-prone long reads have been developed to date. The output data quality is very important for downstream analysis, whereas computing resources could limit the utility of some computing-intense tools. There is a lack of standardized assessments for these long-read error-correction methods.</p> </td>
+	<td><img src="images/ComparativeEval1.png" width="300"></td></tr> 
+</table> 
+		
+	
+	
 
 	
 <p>
