--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
  <h2>Latest Publications</h2>
 	
 <table>
-	<tr><td><img src="images/GenomeBio.jpg" width="50"></td>
+	<tr><img src="images/GenomeBio.jpg" width="50">
 		<td><b>A comparative evaluation of hybrid error correction methods for error-prone long reads</b> 
 		<br>Fu, S., <b>Wang, A., Au, K.F.</b>
   		<br><i> Genome Biology.</i> 2019.  [<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1605-z">Manuscript</a>]</td></tr>
