--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
 
 
  <h2>Latest Publications</h2>
-	
-<table>
+
+	<div><img src="images/GenomeBio.jpg" width="50" style='float: left;'/>
+ <p>some text (that will now wrap around the image</p>
+</div>
+<table> 
 	<tr><img src="images/GenomeBio.jpg" width="50">
 		<td><b>A comparative evaluation of hybrid error correction methods for error-prone long reads</b> 
 		<br>Fu, S., <b>Wang, A., Au, K.F.</b>
