--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 	<tr><td>Third-generation sequencing technologies have advanced the progress of the biological research by generating reads that are substantially longer than second-generation sequencing technologies. However, their notorious high error rate impedes straightforward data analysis and limits their application. A handful of error correction methods for these error-prone long reads have been developed to date. The output data quality is very important for downstream analysis, whereas computing resources could limit the utility of some computing-intense tools. There is a lack of standardized assessments for these long-read error-correction methods. </td>
 	<td><img src="images/ComparativeEval1.png" width="300"></td></tr> 
 </table> 
-		
+	
+<br>		
 <div><img src="images/CR.jpg" width="50" style='float: left;'/>
  <p><b>Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b>
 <b>Wang, Y., Wang, A., Liu, Z.</b>, Thurman, A., Powers, L.S., Zou, M., Hefel, A., Li, Y., Zabner, J., <b>Au, K.F.</b>
@@ -94,10 +95,25 @@
 </p>
 </div>
 <table> 
-	<tr><td>Genome-wide chromatin accessibility and nucleosome occupancy profiles have been widely investigated, while the long-range dynamics remains poorly studied at the single-cell level. Here we present a new experimental approach MeSMLR-seq (methyltransferase treatment followed by single-molecule long-read sequencing) for long-range mapping of nucleosomes and chromatin accessibility at single DNA molecules, and thus achieve comprehensive-coverage characterization of the corresponding heterogeneity. MeSMLR-seq offers direct measurements of both nucleosome-occupied and nucleosome-evicted regions on a single DNA molecule, which is challenging for many existing methods... 
+	<tr><td>Genome-wide chromatin accessibility and nucleosome occupancy profiles have been widely investigated, while the long-range dynamics remains poorly studied at the single-cell level. Here we present a new experimental approach MeSMLR-seq (methyltransferase treatment followed by single-molecule long-read sequencing) for long-range mapping of nucleosomes and chromatin accessibility at single DNA molecules, and thus achieve comprehensive-coverage characterization of the corresponding heterogeneity. MeSMLR-seq offers direct measurements of both nucleosome-occupied and nucleosome-evicted regions on a single DNA molecule, which is challenging for many existing methods. We applied MeSMLR-seq to haploid yeast, where single DNA molecules represent single cells, and thus we could investigate the combinatorics of many (up to 356) nucleosomes at long range in single cells. We illustrated the differential organization principles of nucleosomes surrounding the transcription start site for silently- and actively-transcribed genes, at the single-cell level and in the long-range scale. 
 </td>
 	<td><img src="images/Single-mol.png" width="300"></td></tr> 
 </table> 	
+
+<br>
+<div><img src="images/Sciencemag.jpg" width="50" style='float: left;'/>
+ <p><b>EC coupling structural protein junctophilin-2 encodes a stress-adaptive transcription regulator.</b>
+Guo, A., Wang, Y., Chen, B., <b>Wang, Y. </b>,Yuan, J., Zhang, L., Hall, D., Wu, J., Shi, Y., Zhu, Q., Chen, C., Thiel, W.H., 
+	Zhan, X., Weiss, R.M, Zhan, F., Musselman, C., Pufall, M., Zhu, W.,<b> Au, K.F. </b>, Hong, J., Anderson, M.E., Grueter, C.E., Song, L.S.
+  	<br><i>Science.</i> 2018.  [<a href="https://science.sciencemag.org/content/sci/362/6421/eaan3303.full.pdf">Manuscript</a>]
+</p>
+</div>
+<table> 
+	<tr><td>Junctophilin-2 (JP2) is a structural protein required for normal excitation-contraction (E-C) coupling. After cardiac stress, JP2 is cleaved by the calcium ion-dependent protease calpain, which disrupts the E-C coupling ultrastructural machinery and drives heart failure progression. We found that stress-induced proteolysis of JP2 liberates an N-terminal fragment (JP2NT) that translocates to the nucleus, binds to genomic DNA, and controls expression of a spectrum of genes in cardiomyocytes. Transgenic overexpression of JP2NT in mice modifies the transcriptional profile, resulting in attenuated pathological remodeling in response to cardiac stress. Conversely, loss of nuclear JP2NT function accelerates stress-induced development of hypertrophy and heart failure in mutant mice. These data reveal a self-protective mechanism in failing cardiomyocytes that transduce mechanical information (E-C uncoupling) into salutary transcriptional reprogramming in the stressed heart.
+</td>
+	<td><img src="images/EC-coupling.png" width="300"></td></tr> 
+</table> 		
+	
 	
 <p>
   <br><b>EC coupling structural protein junctophilin-2 encodes a stress-adaptive transcription regulator.</b><br>
